feat: log tutma şeklini değiştirdim
